--- a/index.css
+++ b/index.css
@@ -159,8 +159,9 @@ body {
   position: relative;
   border-radius: 50%;
   overflow: hidden;
-  width: 300px; /* Set your desired width */
-  height: 300px; /* Set your desired height */
+  width: 80%; /* Adjust as needed */
+  max-width: 250px; /* Set a maximum width if necessary */
+  height: auto;
   box-shadow: 0 0 0 4px #fff; /* Add a box-shadow to simulate a border */
 }
 
@@ -171,13 +172,14 @@ body {
 
 .overlay-image {
   position: absolute;
-  top: 35%; /* Adjust as needed */
-  left: 50%; /* Adjust as needed */
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .overlay-image img {
   width: 100%;
   height: auto;
-  border-radius: 50%; /* Apply circular frame to the overlay image */
+  border-radius: 50%;
 }
+
